RESOLVED FIXED70984
Fix a small bug in callOperation after r98431
https://bugs.webkit.org/show_bug.cgi?id=70984
Summary Fix a small bug in callOperation after r98431
Yuqiang Xian
Reported 2011-10-26 17:42:28 PDT
TrustedImmPtr is not expecting "int" type parameters.
Attachments
the patch (1.55 KB, patch)
2011-10-26 17:44 PDT, Yuqiang Xian
no flags
Yuqiang Xian
Comment 1 2011-10-26 17:44:57 PDT
Created attachment 112627 [details] the patch
WebKit Review Bot
Comment 2 2011-10-26 17:56:25 PDT
Attachment 112627 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource RA layer request failed: OPTIONS of 'http://svn.webkit.org/repository/webkit': could not connect to server (http://svn.webkit.org) at /usr/lib/git-core/git-svn line 2295 Died at Tools/Scripts/update-webkit line 157. If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2011-10-26 18:07:34 PDT
Comment on attachment 112627 [details] the patch r=me
WebKit Review Bot
Comment 4 2011-10-27 08:06:02 PDT
Comment on attachment 112627 [details] the patch Clearing flags on attachment: 112627 Committed r98574: <http://trac.webkit.org/changeset/98574>
WebKit Review Bot
Comment 5 2011-10-27 08:06:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.