Fix a small bug in callOperation after r98431 https://bugs.webkit.org/show_bug.cgi?id=70984

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-10-27
Reviewed by Geoffrey Garen.

TrustedImmPtr is not expecting "int" type parameters.

* dfg/DFGJITCodeGenerator.h:
(JSC::DFG::callOperation):

Canonical link: https://commits.webkit.org/87218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98574 268f45cc-cd09-0410-ab3c-d52691b4dbfc