Source/JavaScriptCore/dfg/DFGJITCodeGenerator.h
@@ -1507,7 +1507,7 @@ protected:
     }
     JITCompiler::Call callOperation(J_DFGOperation_ESS operation, GPRReg resultTag, GPRReg resultPayload, int startConstant, int numConstants)
     {
-        setupArgumentsWithExecState(TrustedImmPtr(startConstant), TrustedImmPtr(numConstants));
+        setupArgumentsWithExecState(TrustedImm32(startConstant), TrustedImm32(numConstants));
         return appendCallWithExceptionCheckSetResult(operation, resultPayload, resultTag);
     }
     JITCompiler::Call callOperation(J_DFGOperation_EJP operation, GPRReg resultTag, GPRReg resultPayload, GPRReg arg1Tag, GPRReg arg1Payload, void* pointer)
